# Pimax-VRC-Supervisor

./: .gitignore  README.md  RELEASE_NOTES.md  RELEASE_PACKAGING.md  SUMMARY_RU.md  mkdocs.yml
PimaxVrcSupervisor.ConfigEditor/: PimaxVrcSupervisor.ConfigEditor.csproj  Program.cs
PimaxVrcSupervisor.PairedPortCycleHelper/: PimaxVrcSupervisor.PairedPortCycleHelper.csproj  Program.cs
PimaxVrcSupervisor.PortCycleHelper/: PimaxVrcSupervisor.PortCycleHelper.csproj  Program.cs
PimaxVrcSupervisor.SteamVrHost/: PimaxVrcSupervisor.SteamVrHost.csproj  Program.cs
PimaxVrcSupervisor.Tests/: BaseStationDiagnosticsTests.cs  BaseStationStartupAnalysisTests.cs  BaseStationStartupSchedulerTests.cs  BluetoothStartupInitializationTests.cs  HardwareFlightRecorderTests.cs  MigrationSupportTests.cs  PimaxComponentHealthTests.cs  PimaxConnectLifecycleObservationTests.cs  PimaxConnectivityAssessmentTests.cs  PimaxConnectivityProbeTests.cs  PimaxProcessGroupLaunchRecipeTests.cs  PimaxRecoveryExperimentTests.cs  PimaxRegistrationAssessmentTests.cs  PimaxRepairOrchestrationTests.cs  PimaxShellActivationEvidenceTests.cs  PimaxShellActivationPreconditionTests.cs  PimaxShellActivationTests.cs  PimaxShellLaunchTests.cs  PimaxSoftwareStackRepairTests.cs  PimaxStartupOrchestrationTests.cs  PimaxUsbEnumerationTests.cs  PimaxUsbPairedPortCycleDesignTests.cs  PimaxUsbPairedPortCycleExperimentTests.cs  (+9 more)
PimaxVrcSupervisor.Tui/: Cargo.toml  build.rs
PimaxVrcSupervisor.Tui/src/: app.rs  bridge.rs  console_close.rs  diagnostics.rs  main.rs  models.rs  supervisor_process.rs  theme.rs  ui.rs
(+201 files in other folders)
