[package]
name = "pimax-vrc-supervisor-tui"
version = "1.3.0"
edition = "2024"

[[bin]]
name = "PimaxVrcSupervisorTui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"
